--- a/resume.html
+++ b/resume.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <title>Resume</title>
-        <link rel="stylesheet" type="text/css" href="resume.css">
+        <link rel="stylesheet" type="text/css" href="./resume.css">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+<main>
 <div class="resume">
   <div class="column">
     <section class="profile">
@@ -185,5 +186,6 @@
     </section>
   </div>
 </div>
+</main>
     </body>
     </html>
